--- a/pom.xml
+++ b/pom.xml
@@ -191,8 +191,8 @@
 
         <dependency>
             <groupId>com.conveyal</groupId>
-            <artifactId>gtfs-lib</artifactId>
-            <version>3.2.0</version>
+            <artifactId>gtfs-lib-5t</artifactId>
+            <version>3.4.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -211,6 +211,12 @@
             <groupId>com.conveyal</groupId>
             <artifactId>r5</artifactId>
             <version>2.0.0</version>
+            <exclusions>
+            	<exclusion>
+            		<groupId>com.conveyal</groupId>
+            		<artifactId>gtfs-lib</artifactId>
+            	</exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
