--- a/pom.xml
+++ b/pom.xml
@@ -183,7 +183,7 @@
         <!-- Used for loading/fetching/writing GTFS entities -->
         <dependency>
             <groupId>com.conveyal</groupId>
-            <artifactId>gtfs-lib</artifactId>
+            <artifactId>gtfs-lib-5t</artifactId>
             <version>3.4.0-SNAPSHOT</version>
         </dependency>
 
